Temp fix for repl.it being out of place if there is no tags

--- a/public/css/tool.css
+++ b/public/css/tool.css
@@ -31,6 +31,7 @@
 .show_tags{
   margin-top: 1em;
   margin-left: 4em;
+  height: 70px;
   display: flex;
   flex-flow: row;
 }
